# rosbag2parquet

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
datasets/base_msgs/: metadata.yaml
examples/: rosbag2parquet.rs
rosbag2parquet/: Cargo.toml
rosbag2parquet-cli/: Cargo.toml
rosbag2parquet-cli/src/: main.rs
rosbag2parquet-pyo3/: Cargo.toml  README.md  pyproject.toml
rosbag2parquet-pyo3/example/: convert.py
rosbag2parquet-pyo3/python/rosbag2parquet/: __init__.py
rosbag2parquet-pyo3/src/: lib.rs
rosbag2parquet/examples/: rosbag2parquet.rs
rosbag2parquet/src/: cdr.rs  config.rs  error.rs  lib.rs  topic_filter.rs
rosbag2parquet/src/arrow/: arrow_schema_builder.rs  cdr_arrow_parser.rs  core.rs
rosbag2parquet/src/ros/: cdr_ros_parser.rs  core.rs  data.rs  mod.rs  types.rs
scripts/: download_r3live_dataset.bash
src/: arrow.rs  cdr.rs  core.rs  create_test_data.rs  lib.rs  ros.rs
src/arrow/: arrow_schema_builder.rs  cdr_arrow_parser.rs  core.rs  mod.rs  record_batch_builder.rs
src/ros/: cdr_ros_parser.rs  core.rs  data.rs  mod.rs  types.rs
testdata/array_msgs/: metadata.yaml
testdata/rosbag/array_msgs/: array_msgs_0.mcap
testdata/rosbag/base_msgs/: base_msgs_0.mcap
testdata/schema/: image.txt  joint_state.txt  tf_message.txt  twist_stamped.txt
