[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rosbag2parquet"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rosbag2parquet._rosbag2parquet"

[tool.uv]
dev-dependencies = [
    "maturin>=1.7",
    "pytest>=8.0",
]
