[package]
name = "rosbag2parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
camino = "1.1.10"
mcap = "0.23.1"
memmap2 = "0.9.7"
nom = "8.0.0"
parquet = {version = "56.0.0", features = ["arrow"]}
paste = "1.0"
thiserror = "2.0"
arrow = "56.0.0"
arrow-array = "56.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
